[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/images/portrait/ArronNormal.png" type="Texture" id=1]
[ext_resource path="res://assets/images/iconsgear/arron_armor_1.png" type="Texture" id=2]
[ext_resource path="res://assets/images/iconsgear/arron_weapon1_1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/portrait/EmberNormal.png" type="Texture" id=4]
[ext_resource path="res://assets/images/portrait/IolaNeutral.png" type="Texture" id=5]
[ext_resource path="res://assets/images/portrait/RoseNormal.png" type="Texture" id=6]
[ext_resource path="res://assets/images/portrait/RiluNormal.png" type="Texture" id=7]
[ext_resource path="res://assets/images/portrait/ErikaNormal.png" type="Texture" id=8]
[ext_resource path="res://assets/images/iconsitems/Wood.png" type="Texture" id=9]
[ext_resource path="res://assets/images/iconsgear/arron_weapon2_1.png" type="Texture" id=10]
[ext_resource path="res://files/scenes/CraftPanel.gd" type="Script" id=11]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
test_mode = true

[node name="Panel" type="Panel" parent="."]
margin_left = 34.0454
margin_top = 38.5002
margin_right = 1244.05
margin_bottom = 996.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
margin_left = 132.69
margin_top = 41.81
margin_right = 1052.69
margin_bottom = 191.81
scroll_horizontal_enabled = false
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 920.0
margin_bottom = 150.0
size_flags_horizontal = 6

[node name="Arron" type="Button" parent="Panel/ScrollContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="Panel/ScrollContainer/HBoxContainer/Arron"]
margin_left = 7.0
margin_top = 6.0
margin_right = 142.0
margin_bottom = 142.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/Arron"]
margin_left = 10.2202
margin_top = 6.60709
margin_right = 132.22
margin_bottom = 30.6071
text = "Arron"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rose" type="Button" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="Panel/ScrollContainer/HBoxContainer/Rose"]
margin_left = 7.0
margin_top = 6.0
margin_right = 142.0
margin_bottom = 142.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/Rose"]
margin_left = 10.2202
margin_top = 6.60709
margin_right = 132.22
margin_bottom = 30.6071
text = "Rose"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ember" type="Button" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="Panel/ScrollContainer/HBoxContainer/Ember"]
margin_left = 7.0
margin_top = 6.0
margin_right = 142.0
margin_bottom = 142.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/Ember"]
margin_left = 10.2202
margin_top = 6.60709
margin_right = 132.22
margin_bottom = 30.6071
text = "Ember"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Erika" type="Button" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 462.0
margin_right = 612.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="Panel/ScrollContainer/HBoxContainer/Erika"]
margin_left = 7.0
margin_top = 6.0
margin_right = 142.0
margin_bottom = 142.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/Erika"]
margin_left = 10.0
margin_top = 7.0
margin_right = 132.0
margin_bottom = 31.0
text = "Erika"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Iola" type="Button" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 616.0
margin_right = 766.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="Panel/ScrollContainer/HBoxContainer/Iola"]
margin_left = 7.0
margin_top = 6.0
margin_right = 142.0
margin_bottom = 142.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/Iola"]
margin_left = 10.0
margin_top = 7.0
margin_right = 132.0
margin_bottom = 31.0
text = "Iola"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rilu" type="Button" parent="Panel/ScrollContainer/HBoxContainer"]
margin_left = 770.0
margin_right = 920.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="Panel/ScrollContainer/HBoxContainer/Rilu"]
margin_left = 7.0
margin_top = 6.0
margin_right = 142.0
margin_bottom = 142.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ScrollContainer/HBoxContainer/Rilu"]
margin_left = 10.2202
margin_top = 6.60709
margin_right = 132.22
margin_bottom = 30.6071
text = "Rilu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel"]
self_modulate = Color( 0.505882, 1, 0.0980392, 1 )
margin_left = 2.5636
margin_top = 241.218
margin_right = 1213.56
margin_bottom = 964.218
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="Panel/Panel"]
margin_left = 776.809
margin_top = 9.89948
margin_right = 780.809
margin_bottom = 715.899
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Panel"]
margin_left = 24.513
margin_top = 15.3244
margin_right = 1144.51
margin_bottom = 707.324
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon1" type="Control" parent="Panel/Panel/HBoxContainer"]
margin_left = 28.0
margin_right = 278.0
margin_bottom = 691.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 6

[node name="Icon" type="TextureRect" parent="Panel/Panel/HBoxContainer/weapon1"]
margin_left = 0.729553
margin_top = 39.1892
margin_right = 250.73
margin_bottom = 289.189
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/Panel/HBoxContainer/weapon1"]
margin_left = 12.3511
margin_top = 593.0
margin_right = 235.351
margin_bottom = 649.0
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Panel/HBoxContainer/weapon1"]
margin_left = -27.0
margin_top = 296.0
margin_right = 274.0
margin_bottom = 320.0
text = "Broad Sword Lv 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/HBoxContainer/weapon1"]
margin_left = 1.81799
margin_top = 362.0
margin_right = 254.818
margin_bottom = 436.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureRect" parent="Panel/Panel/HBoxContainer/weapon1/VBoxContainer"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Panel/Panel/HBoxContainer/weapon1/VBoxContainer/Button"]
margin_left = 82.0
margin_top = 21.449
margin_right = 258.0
margin_bottom = 45.449
text = "Wood: 50/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon2" type="Control" parent="Panel/Panel/HBoxContainer"]
margin_left = 434.0
margin_right = 684.0
margin_bottom = 691.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 6

[node name="Icon" type="TextureRect" parent="Panel/Panel/HBoxContainer/weapon2"]
margin_left = 0.729553
margin_top = 39.1892
margin_right = 250.73
margin_bottom = 289.189
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/Panel/HBoxContainer/weapon2"]
margin_left = 12.3511
margin_top = 593.0
margin_right = 235.351
margin_bottom = 649.0
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Panel/HBoxContainer/weapon2"]
margin_left = -27.0
margin_top = 296.0
margin_right = 274.0
margin_bottom = 320.0
text = "Sword 2 Lv 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/HBoxContainer/weapon2"]
margin_left = 1.81799
margin_top = 362.0
margin_right = 254.818
margin_bottom = 436.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureRect" parent="Panel/Panel/HBoxContainer/weapon2/VBoxContainer"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Panel/Panel/HBoxContainer/weapon2/VBoxContainer/Button"]
margin_left = 82.0
margin_top = 21.449
margin_right = 258.0
margin_bottom = 45.449
text = "Wood: 50/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon3" type="Control" parent="Panel/Panel/HBoxContainer"]
margin_left = 840.0
margin_right = 1090.0
margin_bottom = 691.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 6

[node name="Icon" type="TextureRect" parent="Panel/Panel/HBoxContainer/weapon3"]
margin_left = 0.729553
margin_top = 39.1892
margin_right = 250.73
margin_bottom = 289.189
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/Panel/HBoxContainer/weapon3"]
margin_left = 12.3511
margin_top = 593.0
margin_right = 235.351
margin_bottom = 649.0
text = "Upgrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Panel/HBoxContainer/weapon3"]
margin_left = -27.0
margin_top = 296.0
margin_right = 274.0
margin_bottom = 320.0
text = "Arron's Armor Lv 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/HBoxContainer/weapon3"]
margin_left = 1.81799
margin_top = 362.0
margin_right = 254.818
margin_bottom = 436.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureRect" parent="Panel/Panel/HBoxContainer/weapon3/VBoxContainer"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Panel/Panel/HBoxContainer/weapon3/VBoxContainer/Button"]
margin_left = 82.0
margin_top = 21.449
margin_right = 258.0
margin_bottom = 45.449
text = "Wood: 50/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Panel" parent="."]
margin_left = 1295.34
margin_top = 208.108
margin_right = 1774.34
margin_bottom = 789.108
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "The text has to color all text up to current upgrade level "
}

[node name="RichTextLabel" type="RichTextLabel" parent="Tooltip"]
margin_left = 31.0
margin_top = 22.0
margin_right = 448.0
margin_bottom = 568.0
bbcode_enabled = true
bbcode_text = "[center]Level 1
Fencing gain +1 attack if target is killed
Level 2
Fencing gain +1 attack if target is killed
Sword Mastery Apply to 2 attacks instead of 1
Level 3
Fencing gain +1 attack if target is killed
Sword Mastery Apply to 2 attacks instead of 1
Swift Strike buff lasts 2 turns
Level 4
Fencing gain +2 attacks if target is killed
Sword Mastery Apply to 2 attacks instead of 1
Swift Strike buff lasts 2 turns
Termination buff increased to 50%[/center]"
text = "Level 1
Fencing gain +1 attack if target is killed
Level 2
Fencing gain +1 attack if target is killed
Sword Mastery Apply to 2 attacks instead of 1
Level 3
Fencing gain +1 attack if target is killed
Sword Mastery Apply to 2 attacks instead of 1
Swift Strike buff lasts 2 turns
Level 4
Fencing gain +2 attacks if target is killed
Sword Mastery Apply to 2 attacks instead of 1
Swift Strike buff lasts 2 turns
Termination buff increased to 50%"
__meta__ = {
"_edit_use_anchors_": false
}
